mern_deployed/03_mern_reactjs_deployed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactjs-deployment
  namespace: mernstack
  labels:
    app: reactjs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: reactjs
  template:
    metadata:
      labels:
        app: reactjs
    spec:
      containers:
      - name: reactjs
        image: iamsamitdev/mern_react:1.0
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: reactjs-service
  namespace: mernstack
spec:
  type: NodePort # Change to LoadBalancer for external access if needed
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30833 # External access port
  selector:
    app: reactjs
